# AURORA

./: .gitignore  LICENSE  README.md  build.sh  dependencies.md  docker-config.json  install.sh
backend/: .env.dev  Dockerfile  Dockerfile.cleanup  pyproject.toml
backend/src/: __init__.py  backend.py  k8s_sync.py
backend/src/crud/: answers.py  authentication.py  items.py  pages.py  participants.py  projects.py  publications.py  responses.py  surveys.py
backend/src/data/: database.py  enums.py  models.py  schemas.py
backend/src/jobs/: cleanup.py
backend/src/routers/: answers.py  applications.py  authentication.py  items.py  logtopics.py  pages.py  participants.py  projects.py  publications.py  surveys.py
backend/src/tasks/: tasks.py
backend/src/templates/: participation.yaml  survey.yaml
backend/src/utils/: export.py  kubernetes.py  sqlalchemy.py
config/k3d/: k3d-config.yaml
config/minio/: minio-values.yaml
frontend/: Dockerfile  components.json  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: app.d.ts  app.pcss  auth.ts  hooks.server.ts
questionnaires/: ati_scale.csv  bfi_scale.csv  godspeed_questionnaire.csv  nars_scale.csv  pssuq_scale.csv  system_usability_scale.csv
survey-operator/: pyproject.toml  simulation.Dockerfile  survey.Dockerfile
survey-operator/src/: simulation_orchestrator.py  survey_controller.py
survey-operator/src/templates/: deployment-template.k8s.yaml  ingress-template.k8s.yaml  service-template.k8s.yaml
survey-platform-chart/: Chart.yaml  values.yaml
(+114 files in other folders)
